--- a/src/common.blocks/page-inner/page-inner.less
+++ b/src/common.blocks/page-inner/page-inner.less
@@ -4,7 +4,15 @@
     padding: 16px 0 40px;
     flex: 1 0 auto;
 
+    &_content {
+        padding: 24px 0 40px;
+    }
+
     @media(min-width: @tablet-landscape) {
         padding: 32px 0 80px;
+
+        &_content {
+            padding: 40px 0 80px;
+        }
     }
 }
