--- a/src/common.blocks/promo-block/promo-block.less
+++ b/src/common.blocks/promo-block/promo-block.less
@@ -14,6 +14,11 @@
 .promo-block__slider {
     margin-bottom: 24px;
 
+    .swiper-slide {
+        display: flex;
+        height: unset;
+    }
+
     .slider-navigation {
         display: none;
     }
@@ -50,6 +55,7 @@
     background-size: cover;
     min-height: 146px;
     position: relative;
+    width: 100%;
 
     @media(min-width: @tablet) {
         min-height: 240px;
@@ -82,6 +88,9 @@
     z-index: 2;
     height: 100%;
     padding: 40px 16px 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     @media(min-width: @tablet-landscape) {
         padding: 40px 120px 18px 120px;
