--- a/src/common.blocks/title/title.less
+++ b/src/common.blocks/title/title.less
@@ -28,6 +28,16 @@
         }
     }
 
+    &_size_xl {
+        font-size: 35px;
+        font-weight: 300;
+        line-height: 1.2;
+
+        @media(min-width: @desktop-medium) {
+            font-size: 55px;
+        }
+    }
+
     &_color {
 
         &_white {
