--- a/src/common.blocks/work-card/work-card.less
+++ b/src/common.blocks/work-card/work-card.less
@@ -70,6 +70,7 @@
     margin-bottom: 24px;
 
     @media(min-width: @desktop-medium) {
+        min-height: 96px;
         font-size: 23px;
         font-weight: 500;
         line-height: 1.41;
